--- a/Scripts/UniT.Easings.asmdef
+++ b/Scripts/UniT.Easings.asmdef
@@ -2,6 +2,7 @@
   "name": "UniT.Easings",
   "rootNamespace": "UniT.Easings",
   "references": [
+    "UniT.Extensions",
     "UniTask",
     "Unity.TextMeshPro"
   ],
